Package.json homepage update

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "pbortfolio",
   "version": "0.1.0",
   "homepage": "https://aadhithyavijayakumar.com",
   "private": true,
