Experience and expertise update

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://aadhithyavijayakumar.com",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
@@ -22,6 +23,8 @@
     "bootstrap": "5.3.1",
     "chart.js": "^4.4.4",
     "d3": "^7.9.0",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.9.0",
     "gsap": "^3.12.2",
     "hamburger-react": "^2.5.0",
@@ -41,6 +44,7 @@
     "react-tilt": "^1.0.2",
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
+    "react-vertical-timeline-component": "^3.6.0",
     "recharts": "^2.12.7",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
